--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,6 +1,8 @@
 :root {
   --header-width: 1440px;
   --header-height: 76px;
+  --footer-height: 576px;
+  --footer-width: 1440px;
   --vp-c-bg: #ffffff;
 }
 
