--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,12 +1,11 @@
-:root {
-  --header-width: 1440px;
-  --header-height: 76px;
-  --footer-height: 576px;
-  --footer-width: 1440px;
-  --vp-c-bg: #ffffff;
-}
+@import url('./reset.scss');
+@import url('./root.scss');
 
 #app {
   width: 100vw;
-  background-color: skyblue;
+}
+::-webkit-scrollbar {
+  height: 0;
+  width: 0;
+  color: transparent;
 }
