--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -2,10 +2,27 @@
 @import url('./root.scss');
 
 #app {
-  width: 100vw;
-  height: auto;
-  transition: all .2s;
+  height: 100%;
 }
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family:
+    Helvetica Neue,
+    Helvetica,
+    Arial,
+    sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
 ::-webkit-scrollbar {
   height: 0;
   width: 0;
