--- a/src/assets/style/root.scss
+++ b/src/assets/style/root.scss
@@ -5,6 +5,12 @@
     --header-height: 76px;
     --footer-height: 576px;
     --vp-c-bg: black;
+    --van-rolling-text-background: #1989fa;
+    --van-rolling-text-color: white;
+    --van-rolling-text-font-size: 24px;
+    --van-rolling-text-gap: 6px;
+    --van-rolling-text-item-border-radius: 5px;
+    --van-rolling-text-item-width: 40px;
   }
 }
 
