--- a/src/assets/style/root.scss
+++ b/src/assets/style/root.scss
@@ -5,12 +5,18 @@
     --header-height: 76px;
     --footer-height: 576px;
     --vp-c-bg: black;
+    --topic-fontSize: 42px;
+    --aside-fontSize: 22px;
     --van-rolling-text-background: #1989fa;
     --van-rolling-text-color: white;
     --van-rolling-text-font-size: 24px;
     --van-rolling-text-gap: 6px;
     --van-rolling-text-item-border-radius: 5px;
     --van-rolling-text-item-width: 40px;
+    --aside-block: 16px;
+    --desc-fontSize: 20px;
+    --desc-lineHeight: 34px;
+    --fu-name-fontSize: 32px;
   }
 }
 
@@ -37,6 +43,12 @@
     --header-height: 65px;
     --footer-height: 490px;
     --vp-c-bg: black;
+    --topic-fontSize: 30px;
+    --aside-fontSize: 18px;
+    --aside-block: 14px;
+    --desc-fontSize: 16px;
+    --desc-lineHeight: 25px;
+    --fu-name-fontSize: 18px;
   }
 }
 
