--- a/src/assets/style/root.scss
+++ b/src/assets/style/root.scss
@@ -1,7 +1,7 @@
 /* All animations will take twice as long to finish */
 :root {
-  --animate-duration: 3s;
-  --animate-delay: 3s;
+  --animate-duration: 1.5s !important;
+  --animate-delay: 1s !important;
 }
 @media (min-width: 1520px) and (max-width: 1920px) {
   :root {
@@ -21,8 +21,7 @@
     --desc-fontSize: 20px;
     --desc-lineHeight: 34px;
     --fu-name-fontSize: 32px;
-    --animate-duration: 3s;
-    --animate-delay: 3s;
+
   }
 }
 
@@ -38,8 +37,7 @@
     --fu-name-fontSize: 32px;
     --topic-fontSize: 42px;
     --aside-fontSize: 22px;
-    --animate-duration: 3s;
-    --animate-delay: 3s;
+
   }
 }
 
@@ -55,8 +53,7 @@
     --desc-fontSize: 16px;
     --desc-lineHeight: 25px;
     --fu-name-fontSize: 18px;
-    --animate-duration: 3s;
-    --animate-delay: 3s;
+
   }
 }
 @media (min-width: 960px) and (max-width: 1220px) {
@@ -71,8 +68,7 @@
     --desc-fontSize: 16px;
     --desc-lineHeight: 25px;
     --fu-name-fontSize: 18px;
-    --animate-duration: 3s;
-    --animate-delay: 3s;
+
   }
 }
 
@@ -81,8 +77,6 @@
     --base-width: 100%;
     --header-height: 65px;
     --footer-height: 460px;
-    --animate-duration: 3s;
-    --animate-delay: 3s;
     --vp-c-bg: black;
   }
 }
