--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -104,3 +104,19 @@ video {
   border-radius: 20px;
   object-fit: cover;
 }
+
+.swiper-slide {
+  background-color: transparent !important;
+}
+.swiper-slide-fully-visible {
+  background-color: transparent !important;
+}
+.swiper-slide-prev {
+  background-color: transparent !important;
+}
+.swiper-slide-next {
+  background-color: transparent !important;
+}
+.swiper-wrapper {
+  background-color: transparent !important;
+}
