--- a/src/assets/style/root.scss
+++ b/src/assets/style/root.scss
@@ -78,58 +78,18 @@
 }
 
 // 无敌浏览器分辨率
-@media (min-width: 2014px) {
+@media (min-width: 2133px) {
   :root {
     --base-width: 80vw;
     --header-height: 7vh;
     --footer-height: 80vh;
     --vp-c-bg: black;
-    --topic-fontSize: 150px;
-    --aside-fontSize: 100px;
-    --aside-block: 80px;
-    --desc-fontSize: 70px;
-    --desc-lineHeight: 100px;
-    --fu-name-fontSize: 120px;
+    --topic-fontSize: 3rem;
+    --aside-fontSize: 3rem;
+    --aside-block: 3rem;
+    --desc-fontSize: 1.2rem;
+    --desc-lineHeight: 1.6rem;
+    --fu-name-fontSize: 1.5rem;
   }
 
-  .konw-more-about {
-    margin-top: 5vh;
-    width: 8vw;
-    height: 5vh;
-    border-radius: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #f3a7a5;
-    cursor: pointer;
-
-    .text {
-      width: 80%;
-      font-family:
-        Microsoft YaHei,
-        Microsoft YaHei;
-      font-weight: 400;
-      font-size: 70px;
-      color: #f3a7a5;
-      text-align: center;
-      text-indent: 0.5em;
-    }
-
-    .about-icon {
-      color: #f3a7a5;
-      font-size: 200px;
-    }
-
-    &:hover {
-      background-color: #f3a7a5;
-      .text {
-        color: white;
-      }
-
-      .about-icon {
-        color: white;
-        font-size: 200px;
-      }
-    }
-  }
 }
